--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-   
-     "dev": "concurrently \"npm:dev-backend\" \"npm:dev-frontend\"",
-  "dev-backend": "cross-env NODE_ENV=development tsx watch server/index.ts",
-  "dev-frontend": "cd client && vite --host",
+    "dev": "concurrently \"npm:dev-backend\" \"npm:dev-frontend\"",
+    "dev-backend": "cross-env NODE_ENV=development tsx watch server/index.ts",
+    "dev-frontend": "cd client && vite --host",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
@@ -100,6 +99,7 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
