--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 VITE_API_URL=http://localhost:3000
-SESSION_SECRET=your_super_secret_key
+
+MONGO_URI=mongodb+srv://vijayrawat289h_db_user:vV2forTU2LGoUNap@cluster0.qxc4udo.mongodb.net/gehuClubs
+
+SESSION_SECRET=your_super_secret_key_12345
