--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@radix-ui/react-toast": "^1.2.7",
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.60.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/multer": "^2.0.0",
@@ -62,6 +62,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "mongoose": "^8.19.4",
     "multer": "^2.0.2",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
@@ -91,6 +92,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.2",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
