--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "concurrently \"npm:dev-backend\" \"npm:dev-frontend\"",
+    "dev-frontend-wait": "wait-on http://localhost:5000 && npm run dev-frontend",
+    "dev": "concurrently \"npm:dev-backend\" \"npm:dev-frontend-wait\"",
     "dev-backend": "cross-env NODE_ENV=development tsx watch server/index.ts",
     "dev-frontend": "cd client && vite --host",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
@@ -108,6 +109,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "tsx": "^4.20.5",
+    "wait-on": "^7.0.1",
     "typescript": "5.6.3",
     "vite": "^5.4.21"
   },
