fix: simplify dev setup - remove Vite middleware, run frontend standalone
- Removed Vite middleware from server/vite.ts (was causing alias resolution issues)
- Frontend now runs standalone via Vite dev server on 5173/5174
- Backend and frontend run concurrently via npm scripts
- Frontend proxies /api requests to backend via vite.config.ts
- Removed wait-on dependency from dev script (both start immediately)
- This is the standard two-process dev setup for React + Express

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev-frontend-wait": "wait-on http://localhost:5000 && npm run dev-frontend",
-    "dev": "concurrently \"npm:dev-backend\" \"npm:dev-frontend-wait\"",
+    "dev": "concurrently \"npm:dev-backend\" \"npm:dev-frontend\"",
     "dev-backend": "cross-env NODE_ENV=development tsx watch server/index.ts",
     "dev-frontend": "cd client && vite --host",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
