--- a/package.json
+++ b/package.json
@@ -96,8 +96,8 @@
     "@types/node": "^20.19.25",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.22",
@@ -108,9 +108,9 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "tsx": "^4.20.5",
-    "wait-on": "^7.0.1",
     "typescript": "5.6.3",
-    "vite": "^5.4.21"
+    "vite": "^5.4.21",
+    "wait-on": "^7.0.1"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
