--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
     "dev": "concurrently \"npm:dev-backend\" \"npm:dev-frontend\"",
     "dev-backend": "cross-env NODE_ENV=development tsx watch server/index.ts",
     "dev-frontend": "cd client && vite --host",
-
     "build": "npm run build:client && npm run build:server",
-
     "build:client": "cd client && npm install && npm run build",
     "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
@@ -47,6 +44,7 @@
     "@radix-ui/react-toast": "^1.2.7",
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.60.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/multer": "^2.0.0",
@@ -54,6 +52,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "connect-mongo": "^5.1.0",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
