--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cmdk": "^1.1.1",
     "connect-mongo": "^5.1.0",
     "connect-pg-simple": "^10.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.1",
