--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
