--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.60.5",
     "@types/bcryptjs": "^2.4.6",
-    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -94,9 +93,11 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/connect-pg-simple": "^7.0.3",
-    "@types/express": "4.17.21",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.2",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.19.25",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
