--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.17.2",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@neondatabase/serverless": "^0.10.4",
@@ -62,6 +63,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.2",
     "framer-motion": "^11.13.1",
+    "hcaptcha": "^0.2.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
