--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev-backend": "cross-env NODE_ENV=development tsx watch server/index.ts",
     "dev-frontend": "cd client && vite --host",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build --root client --outDir ../dist",
+    "build:client": "npx vite build --root client --outDir ../dist",
     "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
